# AnalyticalGeometry

./: CMakeLists.txt  README.md  main.cpp  tmp.txt
include/: Algoritms.h  FileSystem.h  Matrix.h  Plane.h
source/: Algoritms.cpp  FileSystem.cpp  Plane.cpp
